MAJ travail en cours sur Routing

--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -1,3 +1,13 @@
+<div *ngIf="!isHome" class="wrapper" (click)="switchPannel('home')">
+  <svg width="18px" height="17px" viewBox="0 0 18 17" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <g id="prev" transform="translate(8.500000, 8.500000) scale(-1, 1) translate(-8.500000, -8.500000)">
+          <polygon class="arrow" points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"></polygon>
+          <polygon class="arrow-fixed" points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"></polygon>
+          <path d="M-1.48029737e-15,0.56157424 L-1.48029737e-15,16.1929159 L9.708,8.33860465 L-2.66453526e-15,0.56157424 L-1.48029737e-15,0.56157424 Z M1.33333333,3.30246869 L7.62533333,8.34246869 L1.33333333,13.4327013 L1.33333333,3.30246869 L1.33333333,3.30246869 Z"></path>
+      </g>
+  </svg>
+</div>
+
 <div class="pannelHome" *ngIf="isHome && !isLoading">
   <div class="titlePanel">
     <h1>Vos panels</h1>
@@ -5,7 +15,7 @@
   </div>
 
   <div class="tPannel">
-    <figure class="snip1477"  [routerLink]="['own-stats']" (click)="switchPannel('ownStats')" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
+    <figure class="snip1477" (click)="switchPannel('ownStats')">
       <img src="./assets/img/home_ownstat.svg" />
     <div class="title">
       <div>
@@ -15,9 +25,10 @@
     <figcaption>
       <p>Analysez vos statistiques personnelles sur tous vos messages.</p>
     </figcaption>
+    <a href="#"></a>
     </figure>
 
-    <figure class="snip1477"  [routerLink]="['conv']" (click)="switchPannel('statsConv')" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
+    <figure class="snip1477" (click)="switchPannel('statsConv')">
       <img src="./assets/img/home_conv.svg" />
     <div class="title">
       <div>
@@ -27,9 +38,10 @@
     <figcaption>
       <p>Analysez chacune de vos conversations en détail.</p>
     </figcaption>
+    <a href="#"></a>
     </figure>
 
-    <figure class="snip1477"  [routerLink]="['profil']" (click)="switchPannel('profil')" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
+    <figure class="snip1477" (click)="switchPannel('profil')">
       <img src="./assets/img/home_profil.svg" />
     <div class="title">
       <div>
@@ -39,6 +51,7 @@
     <figcaption>
       <p>Déterminez votre profil Messenger.</p>
     </figcaption>
+    <a href="#"></a>
     </figure>
   </div>
   <hr style="margin-bottom:0;" class="overview">
@@ -50,5 +63,7 @@
 </div>
 
 <div class="mainPannel">
-  <router-outlet></router-outlet>
+  <app-own-stats-pannel [listFilesDico]="listFilesDico" *ngIf="isMyStats"></app-own-stats-pannel>
+  <app-convs-pannel [listFilesDico]="listFilesDico" *ngIf="isMyConvs"></app-convs-pannel>
+  <app-profil-pannel [listFilesDico]="listFilesDico" *ngIf="isMyProfil"></app-profil-pannel>
 </div>
