--- a/src/app/file-drop-page/loading-custom/loading-custom.component.html
+++ b/src/app/file-drop-page/loading-custom/loading-custom.component.html
@@ -9,7 +9,16 @@
   </div>
 </div>
 
-<img src="http://www.avocom971.fr/images2/bandeau-site-n.jpg" class="addGoogle" style="width:728px; height:90px; margin: auto; margin-top:3vh; margin-bottom: 3vh; display: block;"/>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '6ba9dc21c77a7d4cf98116db30866723',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.bcloudhost.com/6ba9dc21c77a7d4cf98116db30866723/invoke.js"></scr' + 'ipt>');
+</script>
 
 <div class="instruction">
   <h3 style="margin-left:1%">Quelques instructions :</h3>
