alt et title SEO

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="!isReady">
     <div class="cover">
       <div class="logoSightMess">
-        <img src="./assets/img/logo_sightmess_bl.png"/>
+        <img alt="SightMess" title="SightMess" src="./assets/img/logo_sightmess_bl.png"/>
       </div>
-       <div class="button-container-2" [routerLink]="['home']">
+       <div alt="Cliquez ici et analysez vos messages" title="Cliquez ici et analysez vos messages" class="button-container-2" [routerLink]="['home']">
         <span class="mas" >
           <h1 class="launchText">Lancez Vous</h1>
         </span>
