--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -196,18 +196,9 @@
         <input class="dropButton" type='file' (change)="onSelectFile($event)" webkitdirectory >
         
         <button class="buttonSelect">Selectionner votre dossier</button>
-        
-        <script type="text/javascript">
-          atOptions = {
-            'key' : '6ba9dc21c77a7d4cf98116db30866723',
-            'format' : 'iframe',
-            'height' : 90,
-            'width' : 728,
-            'params' : {}
-          };
-          document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.bcloudhost.com/6ba9dc21c77a7d4cf98116db30866723/invoke.js"></scr' + 'ipt>');
-        </script>
-    
+      
+        <ad-custom [urlAddon]=1></ad-custom>
+
         <div class="qsn">
           <h2 style="text-align:center; padding-top:1%">Qui sommes nous ?</h2>
           <hr class="overview">
