--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -44,27 +44,8 @@
   <hr style="margin-bottom:0;" class="overview">
 
   <div style="display:flex; flex-wrap: wrap; padding-top: 3vh;">
-    <script type="text/javascript">
-      atOptions = {
-        'key' : '6ba9dc21c77a7d4cf98116db30866723',
-        'format' : 'iframe',
-        'height' : 90,
-        'width' : 728,
-        'params' : {}
-      };
-      document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.bcloudhost.com/6ba9dc21c77a7d4cf98116db30866723/invoke.js"></scr' + 'ipt>');
-    </script>
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : '6ba9dc21c77a7d4cf98116db30866723',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.bcloudhost.com/6ba9dc21c77a7d4cf98116db30866723/invoke.js"></scr' + 'ipt>');
-</script>
+    <ad-custom style="width:50%;" [urlAddon]=2></ad-custom>
+    <ad-custom style="width:50%;" [urlAddon]=2></ad-custom>
   </div>
 </div>
 
