--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -195,6 +195,8 @@
     
         <input class="dropButton" type='file' (change)="onSelectFile($event)" webkitdirectory >
         
+        <ad-custom [urlAddon]=1></ad-custom>
+        
         <button class="buttonSelect">Selectionner votre dossier</button>
         
     
