--- a/src/app/file-drop-page/loading-custom/loading-custom.component.html
+++ b/src/app/file-drop-page/loading-custom/loading-custom.component.html
@@ -8,8 +8,10 @@
     <p>{{valeurChargement}}%</p>
   </div>
 </div>
-
-<ad-custom [urlAddon]=1></ad-custom>
+<div style ="margin-top: 5vh; display:flex; margin-right:auto; margin-left:auto; justify-content: space-between; width: 95%;" class="adInfoLinks">
+    <input type="hidden" name="IL_IN_ARTICLE">
+    <input type="hidden" name="IL_IN_ARTICLE">
+</div>
 
 <div class="instruction">
   <h3 style="margin-left:1%">Quelques instructions :</h3>
