Test intégration /home et modifs mineures

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="!isReady">
+    <a href="http://sightmess.com/home"></a>
     <div class="cover">
       <div class="logoSightMess">
         <img alt="SightMess" title="SightMess" src="./assets/img/logo_sightmess_bl.png"/>
