--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -28,9 +28,9 @@
         <div class="slideshows">
           <div class="slideshow slideshow--hero">
             <div class="slides">
-              <div alt="SightMess détermine l'influenceurs de vos conversations, les contacts avec qui de l'affinité et bien plus encore" class="slide slide1"></div>
-              <div alt="SightMess détermine l'influenceurs de vos conversations, les contacts avec qui de l'affinité et bien plus encore" class="slide slide2"></div>
-              <div alt="SightMess détermine l'influenceurs de vos conversations, les contacts avec qui de l'affinité et bien plus encore" class="slide slide3"></div>
+              <div alt="SightMess détermine les influenceurs de vos conversations, les contacts avec qui vous avez de l'affinité et bien plus encore" class="slide slide1"></div>
+              <div alt="SightMess détermine les influenceurs de vos conversations, les contacts avec qui vous avez de l'affinité et bien plus encore" class="slide slide2"></div>
+              <div alt="SightMess détermine les influenceurs de vos conversations, les contacts avec qui vous avez de l'affinité et bien plus encore" class="slide slide3"></div>
             </div>
           </div>
           <div class="slideshow slideshow--contrast slideshow--contrast--before">
@@ -42,9 +42,9 @@
           </div>
           <div class="slideshow slideshow--contrast slideshow--contrast--after">
             <div class="slides">
-              <div alt="SightMess synthétise votre activité par des graphes clefs et révèle les personnes qui ont comptées pour vous" class="slide slide1"></div>
-              <div alt="SightMess synthétise votre activité par des graphes clefs et révèle les personnes qui ont comptées pour vous" class="slide slide2"></div>
-              <div alt="SightMess synthétise votre activité par des graphes clefs et révèle les personnes qui ont comptées pour vous" class="slide slide3"></div>
+              <div alt="SightMess synthétise votre activité par des graphes clefs et révèle les personnes qui ont compté pour vous" class="slide slide1"></div>
+              <div alt="SightMess synthétise votre activité par des graphes clefs et révèle les personnes qui ont compté pour vous" class="slide slide2"></div>
+              <div alt="SightMess synthétise votre activité par des graphes clefs et révèle les personnes qui ont compté pour vous" class="slide slide3"></div>
             </div>
           </div>
         </div>
