--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -43,9 +43,9 @@
   </div>
   <hr style="margin-bottom:0;" class="overview">
 
-  <div style="display:flex; flex-wrap: wrap; padding-top: 3vh;">
-    <ad-custom style="width:50%;" [urlAddon]=2></ad-custom>
-    <ad-custom style="width:50%;" [urlAddon]=2></ad-custom>
+  <div style="display:flex; padding-top: 3vh;">
+    <ad-custom style="width:50%;"></ad-custom>
+    <ad-custom style="width:50%;"></ad-custom>
   </div>
 </div>
 
