--- a/src/app/add/ad-custom.component.html
+++ b/src/app/add/ad-custom.component.html
@@ -1,6 +1,3 @@
-<div id="div-that-holds-the-iframe">
-
-
-</div> 
-
 <!--<iframe width="100%" height="300" [src]="url | safe"></iframe>-->
+
+<iframe #iframeToFill></iframe>
