--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -197,7 +197,7 @@
         
         <button class="buttonSelect">Selectionner votre dossier</button>
         
-        <ad-custom [urlAddon]=1 *ngIf="isFullLoaded"></ad-custom>
+        <ad-custom *ngIf="isFullLoaded"></ad-custom>
     
         <div class="qsn">
           <h2 style="text-align:center; padding-top:1%">Qui sommes nous ?</h2>
