--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!isReady">
-    <a href="http://sightmess.com/panels"></a>
+    <a href="http://sightmess.com/panels"></a>  <!-- Test pour voir si Google reconnait le lien. A essayer : Zindex = -1 --> 
     <div class="cover">
       <div class="logoSightMess">
         <img alt="SightMess" title="SightMess" src="./assets/img/logo_sightmess_bl.png"/>
