police responsive panels

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -97,7 +97,7 @@
             <h3>Fonctionne sans internet</h3>
             <p>Nous ne stockons aucune de vos données personnelles.</p>
             <p>Seul vous avez accès aux informations affichées.</p> 
-            <p>SightMess fonctionne localement, vous pouvez donc couper Internet !</p>
+            <p>SightMess fonctionne localement, vous pouvez donc couper Internet dès maintenant !</p>
           </div>
         </div>
         <div class="lancezV">
