--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -746,6 +746,7 @@ html,body {
   text-align:justify;
   margin-left: 2%;
   margin-right: 2%;
+  font-size:1.5vh
 }
 
 .card img {
@@ -756,7 +757,7 @@ html,body {
 }
 
 .card h3{
-  font-size:21px;
+  font-size:2vw;
   margin:0;
   margin-top: 1.5%;
   margin-bottom: 3%;
