--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -9,7 +9,7 @@
           <h1 class="launchText">Lancez Vous</h1>
         </span>
         <button style="padding: 0;" type="button" name="Hover" >
-          <a href="http://sightmess.com/home" style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></a>
+          <a href="/home" style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></a>
         </button>
       </div>
     </div>
