--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -639,6 +639,78 @@ html,body {
   }
 }
 
+
+
+#modal-container-mobile {
+  position:fixed;
+  display:table;
+  height:100%;
+  width:100%;
+  top:0;
+  left:0;
+  transform:scale(0);
+  z-index:5;
+  &.one {
+    transform:scaleY(.01) scaleX(0);
+    animation:unfoldIn 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+    .modal-background {
+      .modal {
+        transform:scale(0);
+        animation: zoomIn .5s .8s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+      }
+    }
+    &.out {
+      transform:scale(1);
+      animation:unfoldOut 1s .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+      .modal-background {
+        .modal {
+          animation: zoomOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+        }
+      }
+    }
+  }
+  .modal-background {
+    display:table-cell;
+    background:rgba(0,0,0,.8);
+    text-align:center;
+    vertical-align:middle;
+    .modal {
+      background:white;
+      padding:20px;
+      display:inline-block;
+      border-radius:3px;
+      font-weight:300;
+      position:relative;
+      height: 90vh;
+      overflow: auto;
+      h2 {
+        font-size:25px;
+        line-height:25px;
+        margin-bottom:15px;
+      }
+      p {
+        font-size:18px;
+        line-height:22px;
+      }
+      .modal-svg {
+        position:relative;
+        z-index:3;
+        top:0;
+        left:0;
+        height:100%;
+        width:100%;
+        border-radius:3px;
+        rect {
+          stroke: #fff;
+          stroke-width: 2px;
+          stroke-dasharray: 778;
+          stroke-dashoffset: 778;
+        }
+      }
+    }
+  }
+}
+
 .content {
   min-height:100%;
   height:100%;
@@ -1143,66 +1215,6 @@ label{
   margin-block-end: 0em;
   font-size: 1em;
   margin-bottom:0.1%;
-}
-
-// Button Back 
-
-$ease: cubic-bezier(.2,1,.3,1);
-  
-.wrappercgu {
-  position: absolute;
-  margin-left:5%;
-  transform: translate(-50%, -50%);
-  margin-top:2.2%;
-  
-  svg {
-    width: 100px;
-    height: 9vh;
-    margin: 0 2rem;
-    cursor: pointer;
-    overflow: visible;
-    polygon, path {
-      transition: all 0.5s $ease;
-      fill : #1A1837;
-    }
-    &:hover polygon, &:hover path {
-      transition: all 1s $ease;
-      fill: rgb(250, 138, 47);
-    }
-      
-    &:hover .arrow {
-      animation: arrow-anim 2.5s $ease infinite;
-    }
-    &:hover .arrow-fixed {
-      animation: arrow-fixed-anim 2.5s $ease infinite;
-    }
-  }
-}
-
-@keyframes arrow-anim {
-	0% {
-		opacity: 1;
-		transform: translateX(0);
-	}
-	5% {
-		transform: translateX(-0.1rem);
-	}
-	100% {
-		transform: translateX(1rem);
-		opacity: 0;
-	}
-}
-
-@keyframes arrow-fixed-anim {
-	5% {
-		opacity: 0;
-	}
-	20% {
-		opacity: 0.4;
-	}
-	100% {
-		opacity: 1;
-	}
 }
 
 .CGU:hover {
