--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="!isReady">
+    <a href="http://sightmess.com/panels"></a>  <!-- Test pour voir si Google reconnait le lien. A essayer : Zindex = -1 --> 
+    <a href="fb-messenger://share/?link=http%3A%2F%2Fsightmess.com%2F">Send In Messenger</a>
     <div class="cover">
       <div class="logoSightMess">
         <img alt="SightMess" src="./assets/img/logo_sightmess_bl.png"/>
