--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,11 @@
 <div *ngIf="!isReady">
-    <a href="http://sightmess.com/panels"></a>  <!-- Test pour voir si Google reconnait le lien. A essayer : Zindex = -1 --> 
+  <a href="http://sightmess.com/home/cgu"></a>  <!-- Test pour voir si Google reconnait le lien --> 
+  <a href="http://sightmess.com/home/cgu" id="testHref" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
     <div class="cover">
+        <div class="social-buttons" style="color:black;">  <!-- Test pour voir si Google reconnait le lien --> 
+          <a href="http://sightmess.com/home/cgu" id="testHref2" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
+          <a href="http://sightmess.com/home/cgu" id="testHref3" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
+        </div>   <!-- Test pour voir si Google reconnait le lien --> 
       <div class="logoSightMess">
         <img alt="SightMess" src="./assets/img/logo_sightmess_bl.png"/>
       </div>
@@ -22,7 +27,7 @@
             <i class="fab fa-linkedin-in"></i>
             </span>
           </a>
-          
+
           <a href="https://www.facebook.com/PaulWlff" rel="noopener noreferrer" target="_blank" class="social-buttons__button social-button social-button--facebook" aria-label="Facebook">
             <span class="social-button__inner">
             <i class="fab fa-facebook-f"></i>
