--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -14,20 +14,11 @@
           <p style="font-size: 0.8em; margin-top: -1vh; font-style: italic;">Cliquez ici</p>
         </button>
       </div>
-      <div style="width:100%; bottom:0; position:absolute">
-      <p style="text-align:center; margin-bottom:0; opacity:0.8">Suivez-nous sur nos réseaux sociaux</p>
-        <div class="social-buttons" style="color:black;">
-          <a href="https://www.linkedin.com/in/paulwlf/" rel="noopener noreferrer" target="_blank" class="social-buttons__button social-button social-button--linkedin" aria-label="LinkedIn">
-            <span class="social-button__inner">
-            <i class="fab fa-linkedin-in"></i>
-            </span>
-          </a>
-          
-          <a href="https://www.facebook.com/PaulWlff" rel="noopener noreferrer" target="_blank" class="social-buttons__button social-button social-button--facebook" aria-label="Facebook">
-            <span class="social-button__inner">
-            <i class="fab fa-facebook-f"></i>
-            </span>
-          </a>
+      <div style="width:100%; bottom:10; position:absolute">
+        <p style="text-align:center; margin-bottom:0; opacity:0.8">Suivez-nous sur nos réseaux sociaux</p>
+        <div class="buttonReseaux">
+          <a href="https://www.linkedin.com/company/sightmess" target="_blank"><img src="./assets/img/logo_linkedin.svg"/></a>
+          <a href="https://www.facebook.com/sightmess" target="_blank"><img src="./assets/img/logo_facebook.svg"/></a>
         </div>
       </div>
     </div>
