--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -200,58 +200,73 @@
               <div class="modal">
                 <div class="tutorial">
                   <div class="oneStep">
-                    <p>CECI EST LE TUTORIEL POUR SMARTPHONE/TABLET</p> 
+                    <h2 style="text-align:center; padding-top:1%; padding-bottom:1%">Guide rapide d'utilisation smartphone/tablette</h2>
                   </div>
             <div class="oneStep">
-              <p>ETAPE 2 DE CE TUTO</p>
-            </div>
-            <div class="oneStep">
               <div class="textSide2" style="margin-right:1%">
-                <h1>3. Téléchargez vos messages.</h1>
+                <h1>1. Ouvrir vos paramètres Facebook.</h1>
                 <hr class="overview">
-                <p>Après avoir attendu que Facebook créé votre dossier, vous pouvez télécharger vos messages ! <b>Vous serez notifié.</b></p>
+                <p>La première étape est de vous rendre sur votre application dans <b>Paramètres</b>. Vous pouvez également y accéder dans votre navigateur via <a class="clickHere" href="https://www.facebook.com/settings" target="_blank">ce lien</a></p>
               </div>
               <div class="imgSide">
-                <img alt="Téléchargement" title="Téléchargement" src="./assets/img/tutoriel3.png" class="imageTutorial2"/>
-                <img alt="Flèche" title="Flèche" src="./assets/img/tutoriel4.png" id="flecheBas"/>
-                <img alt="Messages prêts" title="Messages prêts" src="./assets/img/tutoriel5.png" class="imageTutorial2"/>
+                <img alt="Paramètres" title="Paramètres" src="./assets/img/tutomobile1.jpg" class="imageTutorial2"/>
               </div>
             </div>
             <div class="oneStep">
               <div class="imgSide">
-                <img alt="Extraire fichier Facebook" title="Extraire fichier Facebook" src="./assets/img/tutoriel6.png" 
-                class="imageTutorial2"/>
+                <img alt="Téléchargement informations" title="Téléchargement informations" src="./assets/img/tutomobile2.jpg" class="imageTutorial2"/>
               </div>
               <div class="textSide2" style="margin-left:1%">
-                <h1>4. Extraire votre dossier</h1>
+                <h1>2. Accéder à vos informations Facebook.</h1>
                 <hr class="overview">
-                <p style="margin-bottom:1%">Rendez-vous dans votre dossier “Téléchargements” et <b>décompressez</b> facebook-PrenomNom.zip.</p>
-                <p style="margin-bottom:1%">Vous pouvez utiliser pour cela n’importe quel logiciel de décompression, par exemple : </p>
-                <p>- <a class="clickHere" href="https://www.7-zip.fr/" target="_blank">7zip</a> sur Windows.</p>
-                <p>- <a class="clickHere" href="https://itunes.apple.com/fr/app/the-unarchiver/id425424353?mt=12" target="_blank">Unarchiver</a> sur Mac.</p>
+                <p>Scroller jusqu'à la section <b>Vos informations Facebook</b> et sélectionner <b>Télécharger vos informations</b></p>
               </div>
             </div>
             <div class="oneStep">
-              <div class="textSide2" style="margin-right:1%">
-                <h1>5. Lancez l'analyse SightMess !</h1>
-                <hr class="overview">
-                <p>Vous n’avez plus qu’à sélectionner votre dossier</p>
-                <p>Et... <b>C’est parti !</b></p>
+                <div class="textSide2" style="margin-right:1%">
+                  <h1>3. Sélectionner vos messages.</h1>
+                  <hr class="overview">
+                  <p>Sélectionner <b>Tout déselectionner</b></p>
+                  <p>Ensuite, sélectionner seulement <b>Messages</b></p>
+                  <p>Scroller jusqu'en bas de la page.</p>
+                </div>
+                <div class="imgSide">
+                  <img alt="Sélectionner messages" title="Sélectionner messages" src="./assets/img/tutomobile3.jpg" class="imageTutorial2"/>
+                </div>
               </div>
-              <div class="imgSide">
-                <img alt="Sélectionner vos messages Facebook" title="Sélectionner vos messages Facebook" src="./assets/img/tutoriel7.png" id="boutonUpload"/>
-                <img alt="Flèche" title="Flèche" src="./assets/img/tutoriel4.png" id="flecheBas"/>
-                <img alt="Lancez vous dans l'analyse" title="Lancez vous dans l'analyse" src="./assets/img/tutoriel8.png" class="imageTutorial2"/>
-              </div>
-            </div>
+              <div class="oneStep">
+                  <div class="imgSide">
+                    <img alt="Créer un fichier" title="Créer un fichier" src="./assets/img/tutomobile4.jpg" class="imageTutorial2"/>
+                  </div>
+                  <div class="textSide2" style="margin-left:1%">
+                    <h1>4. Lancer la création de l'export.</h1>
+                    <hr class="overview">
+                    <p>Une fois en bas de la page :</p>
+                    <p>Format - <b>Mettre "JSON"</b></p>
+                    <p>Qualité des photos - <b>Mettre "Faible"</b></p>
+                    <p>Sélectionner <b>Créer un fichier</b></p>
+                  </div>
+                </div>
+                <div class="oneStep">
+                    <div class="textSide2" style="margin-right:1%">
+                      <h1>5. C'est fini !</h1>
+                      <hr class="overview">
+                      <p>Félicitations ! Vos messages sont en train d'être préparés.</p>
+                      <p>Vous allez recevoir bientôt une <b>notification</b>.</p>
+                      <p>Vous pourrez télécharger votre dossier sur Facebook depuis votre ordinateur et lancer l'analyse Sightmess !</p>
+                    </div>
+                    <div class="imgSide">
+                      <img alt="Fin" title="Fin" src="./assets/img/tutomobile5.jpg" class="imageTutorial2"/>
+                    </div>
+                  </div>
             <div style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-              <h1>Enjoy SightMess !</h1>
+              <h1>Profitez de SightMess sur votre ordinateur !</h1>
               <hr class="overview">
-              <p style="text-align:left">PS : Sur Chrome, vous aurez ce message, c'est normal !</p>
+              <p style="text-align:left">Depuis votre ordinateur, lancez l'analyse de vos messages sur sightmess.com ! C'est facile, et au cas où, il y a le tutoriel ordinateur.</p>
               <div class="imgSide">
-                <img alt="Message Chrome" title="Message Chrome" src="./assets/img/tutoriel9.png" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
+                <img alt="Bouton upload" title="Bouton upload" src="./assets/img/tutoriel7.png" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
               </div>
-              <p style="text-align:center">Nous vous souhaitons une bonne utilisation et n'oubliez pas de donner votre avis.</p>
+              <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">C'est promis, nous travaillons à ce que ce soit bientôt disponible sur mobile ;)</p>
               <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">L'équipe SightMess</p>
             </div>
           </div>
