--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -264,7 +264,7 @@
               <hr class="overview">
               <p style="text-align:left">Depuis votre ordinateur, lancez l'analyse de vos messages sur sightmess.com ! C'est facile, et au cas où, il y a le tutoriel ordinateur.</p>
               <div class="imgSide">
-                <img alt="Bouton upload" title="Bouton upload" src="./assets/img/tutoriel7.png" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
+                <img alt="Bouton upload" title="Bouton upload" src="./assets/img/tutomobile6.jpg" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
               </div>
               <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">C'est promis, nous travaillons à ce que ce soit bientôt disponible sur mobile ;)</p>
               <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">L'équipe SightMess</p>
