--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -103,8 +103,9 @@
         <div class="lancezV">
           <h1>Analyser mes messages</h1>
           <hr class="overview">
-          <p>Cliquez sur le bouton ci-dessous et selectionnez votre dossier Facebook pour commencer l'analyse</p>
-          <p>Vous n'avez pas encore votre dossier ? <a class="clickHere" (click)="showTutorial()">Cliquez ici</a> pour l'obtenir
+          <p>Cliquez sur le bouton ci-dessous et sélectionnez votre dossier Facebook pour commencer l'analyse.</p>
+          <p>Vous n'avez pas encore votre dossier ?</p>
+          <p><a class="clickHere" (click)="showTutorial()">Cliquez ici pour l'obtenir</a></p>
           
         </div>
         
@@ -199,7 +200,7 @@
             <div class="modal-background">
               <div class="modal">
                 <div class="tutorial">
-                  <div class="oneStep">
+                  <div class="oneStep" style="text-align:center;">
                     <h2 style="text-align:center; padding-top:1%; padding-bottom:1%">Guide rapide d'utilisation smartphone/tablette</h2>
                   </div>
             <div class="oneStep">
@@ -264,7 +265,7 @@
               <hr class="overview">
               <p style="text-align:left">Depuis votre ordinateur, lancez l'analyse de vos messages sur sightmess.com ! C'est facile, et au cas où, il y a le tutoriel ordinateur.</p>
               <div class="imgSide">
-                <img alt="Bouton upload" title="Bouton upload" src="./assets/img/tutomobile6.jpg" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
+                <img alt="Bouton upload" title="Bouton upload" src="./assets/img/tutomobile6.jpg" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:70%"/>
               </div>
               <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">C'est promis, nous travaillons à ce que ce soit bientôt disponible sur mobile ;)</p>
               <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">L'équipe SightMess</p>
@@ -285,7 +286,7 @@
         <ad-custom></ad-custom>
         <div class="youtubeVideo">
         <iframe width="800" height="500"
-        src="https://www.youtube.com/embed/pwyis3PzMdc" style="border:solid; border-width: 15px; border-color:#1A1837">
+        src="https://www.youtube.com/embed/pwyis3PzMdc" style="border:solid; border-width: 10px; border-color:rgb(0, 0, 0); border-radius: 30px;">
         </iframe>
         </div>
 
