routerlink href et package

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,7 +10,7 @@
           <p style="font-size: 0.8em; margin-top: -1vh; font-style: italic;">Cliquez ici</p>
         </span>
         <button style="padding: 0;" type="button" name="Hover" >
-          <a href="/home" style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></a>
+          <a [routerLink]="['home']" style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></a>
           <p style="font-size: 0.8em; margin-top: -1vh; font-style: italic;">Cliquez ici</p>
         </button>
       </div>
