--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -15,24 +15,15 @@
           <p class="textLancezVous" style="margin-top: -1vh; font-style: italic;">Cliquez ici</p>
         </span>
         <button style="padding: 0;" type="button" name="Hover" >
-          <a href="/home" style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></a>
+          <a [routerLink]="['home']" style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></a>
           <p class="textLancezVous" style="margin-top: -1vh; font-style: italic;">Cliquez ici</p>
         </button>
       </div>
-      <div style="width:100%; bottom:0; position:absolute">
-      <p class="nosReseaux">Suivez-nous sur nos réseaux sociaux</p>
-        <div class="social-buttons" style="color:black;">
-          <a href="https://www.linkedin.com/in/paulwlf/" rel="noopener noreferrer" target="_blank" class="social-buttons__button social-button social-button--linkedin" aria-label="LinkedIn">
-            <span class="social-button__inner">
-            <i class="fab fa-linkedin-in"></i>
-            </span>
-          </a>
-
-          <a href="https://www.facebook.com/PaulWlff" rel="noopener noreferrer" target="_blank" class="social-buttons__button social-button social-button--facebook" aria-label="Facebook">
-            <span class="social-button__inner">
-            <i class="fab fa-facebook-f"></i>
-            </span>
-          </a>
+      <div style="width:100%; bottom:10; position:absolute">
+        <p style="text-align:center; margin-bottom:0; opacity:0.8">Suivez-nous sur nos réseaux sociaux</p>
+        <div class="buttonReseaux">
+          <a href="https://www.linkedin.com/company/sightmess" target="_blank"><img src="./assets/img/logo_linkedin.svg"/></a>
+          <a href="https://www.facebook.com/sightmess" target="_blank"><img src="./assets/img/logo_facebook.svg"/></a>
         </div>
       </div>
     </div>
