--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -640,3 +640,21 @@ $social-button-colors: (
     font-size:1.5vh;
   }
 }
+
+.buttonReseaux{
+  display: flex;
+  width: 10vw;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  img{
+    width: 55px;
+    margin-left: 15px;
+    cursor:pointer;
+    border-radius: 1000px;
+  }
+  img:hover {
+    border: 4px solid white;
+    border-radius: 10000px;
+  }
+}
